# bed

./: README.md
bed-3.1.3/: .common.txt  .start.txt  BUGS  CHANGELOG  LICENSE  README  README.FreeBSD  README.android.txt  README.win32  addmagic  bed-2.27.1.spec  bed.menu  bedcygwin.txt  bedkeys  bedmagic.short  bedmagiclang  bedmingw.txt  bedrc.freebsd  bedrc.new  bedrc.was  biosdisk.sh  bug.mbed  chmod.sh  config  config.goed  config.linux  config.static  config.was  config.win32ncurses  config.win32pdcurses2  config.win32pdcurses3  configure  configure.ac  configure~  curtest.cpp  debugbios.sh  description  downloadindex.html  dseonlyext.sh  has_appl.c  (+32 more)
bed-3.1.3/autom4te.cache/: output.0  requests  traces.0
bed-3.1.3/biosdisk/: Makefile  README  bccw16.cfg  biosdisk.c  biosdisk.lib  biosdisk32.c  biosdisk32.def  biosthun.h  rmbioslib.c
bed-3.1.3/buildinfo/: build.in
bed-3.1.3/debian/: README  files  preinst.sh
bed-3.1.3/debian/relog/: relog.cc
bed-3.1.3/doc/: Makefile  bed.1.in2a  bed.1.inend  bed.html.intail.nedstat  bed.html.sed  bed2.html  html3.sed.megahost.com  menu.html.inend  menu.html.nahead  options.sed  options.sed2  sections.sed
bed-3.1.3/man2html/: Makefile  Makefile.in  conf_script  man2html.c
bed-3.1.3/misc/: README.txt  hexasc.bedda  macroheader.bedda  markheader-time_t.bedda  markheader.bedda  programheaderELF64.bedda  rpm.bedda  win32sections.bedda  wtmp-linux.bedda
bed-3.1.3/plugins/: Makefile  faked.h
bed-3.1.3/plugins/examples/: Makefile  ascii2ebcdic.h  bitcontains.cc  bitfields.cc  bitfields.h  char2.cc  chars.c  cut.cc  differ.sh  disass.cc  ebcdic2ascii.h  elftables32.cc  encodechar.sh  file.cpp  filter.cpp  float.cc  helpf1.cc  inclass.cc  macro2plug.sh  magic.cpp  mkfloatdef.cc  mkhelp.c  mknss_dns.sh  multiply.cc  nextitem.cpp  oldfile.cpp  oldsigned.cc  resize.c  rpm2cpiogz.cc  rxvt.cc  searchclip.cc  specrules.mk  subtract.cc  switchsize.cc  translate.cc  undoall.cpp  unsigned.cpp
bed-3.1.3/progman/: bed-binary-editor.desktop
bed-3.1.3/regex-0.13/: Makefile  config.h  config.status  configure.in
bed-3.1.3/src/: addmenu.cpp  alignmem.h  builtinkeys.h  bytesearch.cpp  compile  compileinfo  compinfo  conf-arm-linux-androideabi.h  conf-i686-pc-cygwin.h  conf-i686-w64-mingw32.h  confdefines.h.in  config.h  contain.h  control.cpp  cursesinit.cpp  cursesinit.h  cygwinhelp  dataproc.h  dataprocer.h  datatypes.h  date.c  debug.cpp  defines.h  defines.h.in  definesonly.h  desturbe.cpp  desturbe.h  dialog.cpp  dialog.h  disk.cpp  diskbij.cpp  editlimits.cpp  editor.h  execproc.h  expandfilename.cpp  file.cpp  filter.cpp  getfile.mk  getlabel.cpp  gnuasciiregex.cpp  (+63 more)
bed-3.1.3/terminfo/s/: screen
bed-3.1.3/utils/: Makefile
bed-3.1.3/x11/: Makefile  middlebed  startbed
bed-3.1.4/: BUGS  CHANGELOG  Makefile  README  README.OpenSolaris  TODO  bed-0.2.27.redhat.spec  bedmagic  bedmagic.nieuw  build  config  config.android  config.android2  config.bak3  config.in  config.in.plugin  config.in.was  config.status.lineno  config.win32pdcurses  configure  configure.ac  configure~  dseext.sh  email.sh  has_file.c  ldebug.sh  libs  linux.sh  linuxdebug.sh  mkbed.ned  mkbed.sunsite  mkbedrc95.sh  mkmenu.sh  ndebugger.sh  nwincompile.sh  pdebug.sh  pdwincompile.sh  settings-android_i686  settings.aarch64  settings.android32  (+15 more)
bed-3.1.4/autom4te.cache/: output.0  requests  traces.0
bed-3.1.4/biosdisk/: biosdisk.def  biosdisk.h  biosdisk.ide  biosdisk.mak
bed-3.1.4/buildinfo/: config.status  configure  configure.ac
bed-3.1.4/debian/: changelog  control  control.sh  postinst.sh  postrm.sh  preinst  rules  substvars
bed-3.1.4/debian/bed/DEBIAN/: postinst  postrm
bed-3.1.4/doc/: .datadir.txt  bed.1.in1  bed.1.in2b  bed2.txt  google.cc  html1.sed  html3.sed  manhosts  menu.html.instart  mkindex.sh  sections.tus  xbed.1
bed-3.1.4/man2html/: Makefile  Makefile.was
bed-3.1.4/misc/: Makefile  char2.bedda  char2b.bedda  dynsym.bedda  elfheader32.bedda  elfheader64.bedda  filepermissionbits.bedda  programheaderELF32.bedda  pushlpushl.bedda  sectionheader.bedda  symtab.bedda  wtmp-freebsd.bedda
bed-3.1.4/pkg/: Makefile.in  README  distinfo  pkg-descr  pkg-plist
bed-3.1.4/plugins/: defines.h  global.h  mainprocedures.h  plugin.cpp
bed-3.1.4/plugins/examples/: README  absolute  backward.cc  bitcpy.cc  bitflags.cc  clipboard.cc  crc.c  datatypeinfo.cc  disass-use.c  duplicate.cpp  ebcdic2ascii.cc  edit.cc  errors  eventnames.h  floatdef.h  func.h  index2table.cc  index2table.h  index2table.h.begon  install.cc  local.cpp  mkhelp.sh  mksrcnum.sh  newdata.cc  oldsigned.h  prob.sh  putselect.cc  sethelp.h  signed.cc  signed.h  skip.cpp  testmenus.cc  time.cpp  timerommel.h  title.cc
bed-3.1.4/regex-0.13/: Makefile  Makefile.in  config.status  configure  regtest.cc
bed-3.1.4/src/: Makefile  Partition types List of partition identifiers for PCs.txt  ascii.cpp  ascii.h  bedrcproc.cpp  biosdisk.h  biosdisk.lib  compileinfo  compinfo  conf-.h  conf-aarch64-linux-android.h  conf-aarch64-linux-gnu.h  conf-armv7a-linux-androideabi.h  conf-armv7a-linux-androideabi21.h  conf-i686-linux-android.h  conf-i686-linux-gnu.h  conf-mipsel-linux-android.h  conf-x86_64-linux-android.h  conf-x86_64-w64-mingw32.h  confdefines.h  contain.cpp  convert.h  copy  dataproc.mk  date.c  debug.h  defines.h.all  defines.h.win32ncurses  defines.h.win32pdcurses  defines.h.win32pdnew  definesonly.h  digitstring.cpp  digitstring.h  edit.cpp  editmacros.cpp  editor.cpp  editup.cpp  extramenunr.cpp  filter.h  found  (+83 more)
bed-3.1.4/terminfo/s/: screen-256color
bed-3.1.4/terminfo/x/: xterm-256color
bed-3.1.4/utils/: bin2byte.c  bin2byte2  do
bed-3.1.4/win/ProgramData/Menu Start/: bed.lnk
bed-3.1.4/win/Windows/Start Menu/: bed.lnk
bed-3.1.4/x11/: afterrxvt  bedtryhead  endbed  rmmenu  terminal  xbedone
